# Simple-Hospital-Visualization

./: CMakeLists.txt  README.md  beds.cpp  beds.h  departmants.txt  doctor.cpp  doctor.h  doctor_list.cpp  doctor_list.h  doctors.txt  doctors_process.cpp  doctors_process.h  flow.txt  hazard_unit.cpp  hazard_unit.h  information.txt  main.cpp  patient.cpp  patient.h  pharmacy.cpp  pharmacy.h  readfiile.cpp  readfiile.h  save_patient.cpp  save_patient.h
